# Vocal10n

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_env.ps1  start.bat  start.ps1
.github/prompts/: plan-vocal10nRebuild.prompt.md
config/: context_gaming.txt  default.yaml  filters.txt
knowledge_base/: glossary_general.txt
requirements/: requirements-core.txt  requirements-llm.txt  requirements-main.txt  requirements-stt.txt  requirements-tts.txt
src/vocal10n/: __init__.py  app.py  config.py  constants.py  state.py
src/vocal10n/llm/: api_backend.py  controller.py  corrector.py  engine.py  rag.py  translator.py
src/vocal10n/obs/: overlay.html  server.py
src/vocal10n/pipeline/: coordinator.py  events.py  file_writer.py  latency.py
src/vocal10n/stt/: audio_capture.py  controller.py  diarizer.py  engine.py  filters.py  transcript.py  worker.py
src/vocal10n/tts/: __init__.py  audio_output.py  client.py  controller.py  queue.py  qwen3_client.py  qwen3_controller.py  server_manager.py
src/vocal10n/ui/: main_window.py  section_a.py  section_b.py
src/vocal10n/ui/styles/: theme.qss
src/vocal10n/ui/tabs/: __init__.py  kb_tab.py  obs_tab.py  output_tab.py  qwen3_tts_tab.py  stt_tab.py  training_tab.py  translation_tab.py  tts_container_tab.py  tts_tab.py
src/vocal10n/ui/utils/: combobox_styling.py
src/vocal10n/ui/widgets/: filter_list_editor.py  model_selector.py  param_slider.py  stream_text.py  term_file_list.py
src/vocal10n/utils/: gpu.py  logger.py
