[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocal10n"
version = "0.1.0"
description = "Real-time speech translation system with STT, LLM translation, and TTS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "itsLittleKevin"},
]

[project.scripts]
vocal10n = "vocal10n.app:main"

[tool.setuptools.packages.find]
where = ["src"]
